# claude-local-dev

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/claude_local_dev/: __init__.py  __main__.py  cli.py  config.py  errors.py  junction.py  models.py  registry.py
src/claude_local_dev/commands/: add.py  init.py  list.py  remove.py  verify.py
tests/: conftest.py  test_cli_add.py  test_cli_init.py  test_cli_list.py  test_cli_remove.py  test_cli_verify.py  test_config.py  test_junction.py  test_models.py  test_registry.py
