[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-local-dev"
version = "0.1.0"
description = "CLI tool for managing a local-dev marketplace for Claude Code plugins"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
claude-local-dev = "claude_local_dev.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_local_dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
